force-app/main/default/objects/Apex_Test_Class_Run_Result__c/Apex_Test_Class_Run_Result__c.object-meta.xml
<CustomObject>
    <label>Apex Test Class Run Result</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Apex Test Class Run Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Test Class Run Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>