force-app/main/default/objects/Apex_Test_Class_Run_Result__c/fields/Apex_Test_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Test_Method_Name__c</fullName>
    <label>Apex Test Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>