force-app/main/default/objects/Apex_Test_Class_Run_Result__c/fields/Apex_Test_Run_Container__c.field-meta.xml
<CustomField>
    <fullName>Apex_Test_Run_Container__c</fullName>
    <label>Apex Test Run Container</label>
    <referenceTo>Apex_Test_Run_Container__c</referenceTo>
    <relationshipLabel>Apex Test Class Run Results</relationshipLabel>
    <relationshipName>Apex_Test_Class_Run_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>