force-app/main/default/objects/Apex_Test_Class_Run_Result__c/fields/Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message__c</fullName>
    <description>Mapped to the Message field of the ApexTestResult</description>
    <label>Exception Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>