force-app/main/default/objects/Apex_Test_Class_Run_Result__c/fields/Exception_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Exception_Stack_Trace__c</fullName>
    <description>Maps to the StackTrace field of ApexTestResult</description>
    <label>Exception Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>