force-app/main/default/objects/Apex_Test_Class_Run_Result__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <length>100</length>
    <type>Text</type>
</CustomField>