force-app/main/default/objects/Apex_Test_Class_Run_Result__c/fields/Runtime_ms__c.field-meta.xml
<CustomField>
    <fullName>Runtime_ms__c</fullName>
    <label>Runtime (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>